# microboost

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: report.md
experiments/: plot_learning_curves.py  run_classification.py  run_regression.py
microboost/: __init__.py  boosting.py  losses.py  metrics.py  tree.py
tests/: test_boosting.py  test_losses.py  test_tree.py
